[package]
name = "near-nft-blind-box"
version = "0.1.0"
authors = ["Near Inc <henry@web3games.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = 'https://github.com/near/near-sdk-rs'}
near-contract-standards = { git = 'https://github.com/near/near-sdk-rs'}


[dev-dependencies]
near-sdk-sim = { git = 'https://github.com/near/near-sdk-rs'}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"